--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <script>
 var canvas = document.getElementById("canvas");
 var ctx = canvas.getContext("2d");
-ctx.font = "30px Ariel";
+ctx.font = "30px Arial";
 ctx.fillStyle = "#000000";
 
 function color_change(id){//Change the color of the guess button on click
